update quiz name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <main>
             <section class="container">
                 <div class="start">
-                    <h2>How well do you know JavaScript?</h2>
+                    <h2>How well do you know your JavaScript basics?</h2>
                     <button id="start" class="start-btn">Start Quiz</button>
                     <p id="timer" class="timer"></p>
                 </div>
