--- a/index.html
+++ b/index.html
@@ -3,43 +3,52 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      
-        <link rel="stylesheet" href="./src/style.css" />
+        <link rel="stylesheet" href="./assets/style.css" />
         <title>Javascript Quiz Game</title>
     </head>
+
     <body>
         <header>
             <h1>JavaScript Quiz Game</h1>
         </header>
         <main>
             <section class="container">
-                <div class="start">
+
+                <section id="intro" class="start">
                     <h2>How well do you know your JavaScript basics?</h2>
-                    <button id="start" class="start-btn">Start Quiz</button>
-                    <p id="timer" class="timer"></p>
-                </div>
-                <div id="quiz" class="quiz">
+                    <button id="start-btn" class="start-btn">Start Quiz</button>
+                </section>
+
+                <section id="quiz" class="quiz">
+
                     <div class="question">
                         <h2>Question</h2>
                         <p id="question-text" class="question-text"></p>
                     </div>
-                    <div id="answers" class="answers">
-                        <button class="answer-btn"></button>
-                        <button class="answer-btn"></button>
-                        <button class="answer-btn"></button>
-                        <button class="answer-btn"></button>
-                    </div>
-                </div>
-                <div class="end">
+
+                    <ul id="answers" class="answers">
+                    </ul>
+
+                    <h3>Current Score:</h3>
+                    <p id="current-score" class="score"></p>
+                </section>
+
+                <section id="game-over" class="game-over">
                     <h2>Game Over</h2>
+                    <h3>Your final score is:</h3>
                     <p id="score" class="final-score"></p>
                     <button id="restart" class="restart-btn">Restart</button>
-                </div>
+                    <input type="text" id="initials" placeholder="Enter your initials" />
+                    <button id="submit-id" class="submit-btn">Submit Score</button>
+                </section>
             </section>
-            <section id="scores">
+
+            <section id="scores" class="scores">
                 <h2>High Scores</h2>
                 <ul id="high-scores" class="high-scores"></ul>
             </section>
         </main>
+
+        <script src="./index.js"></script>
     </body>
 </html>
